--- a/webform.html
+++ b/webform.html
@@ -229,11 +229,11 @@
             </div>
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address <p style="color:red;display:inline">*</p></label>
-                <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email">
+                <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email" maxlength="80">
             </div>
             <div class="form-group">
                 <label for="inputFirstName">First Name <p style="color:red;display:inline">*</p></label>
-                <input type="text" class="form-control" id="inputFirstName" onchange="validateTextField('inputFirstName')">
+                <input type="text" class="form-control" id="inputFirstName" onchange="validateTextField('inputFirstName')" maxlength="40">
             </div>
             <div class="form-group">
                 <label for="inputMiddleInitial">Middle Initial</label>
@@ -241,7 +241,7 @@
             </div>
             <div class="form-group">
                 <label for="inputLastName">Last Name <p style="color:red;display:inline">*</p></label>
-                <input type="text" class="form-control" id="inputLastName" onchange="validateTextField('inputLastName')">
+                <input type="text" class="form-control" id="inputLastName" onchange="validateTextField('inputLastName')" maxlength="80">
             </div>
             <div class="form-group">
                 <label for="suffix">Suffix</label>
@@ -258,19 +258,19 @@
             </div>
             <div class="form-group">
                 <label for="titleField">Title</label>
-                <input type="text" class="form-control" id="titleField" onchange="validateTextField('titleField')">
+                <input type="text" class="form-control" id="titleField" onchange="validateTextField('titleField')" maxlength="128">
             </div>
             <div class="form-group">
                 <label for="OrganizationField">Organization/Agency</label>
-                <input type="text" class="form-control" id="OrganizationField" onchange="validateTextField('OrganizationField')">
+                <input type="text" class="form-control" id="OrganizationField" onchange="validateTextField('OrganizationField')" maxlength="255">
             </div>
             <div class="form-group">
                 <label for="addressField">Address</label>
-                <input type="text" class="form-control" id="addressField" onchange="validateTextField('addressField')">
+                <input type="text" class="form-control" id="addressField" onchange="validateTextField('addressField')" maxlength="255">
             </div>
             <div class="form-group">
                 <label for="cityField">City</label>
-                <input type="text" class="form-control" id="cityField">
+                <input type="text" class="form-control" id="cityField" maxlength="40">
             </div>
             <div class="form-group" id="us-state-select">
                 <label for="stateSelect">State</label>
@@ -688,7 +688,7 @@
             </div>
             <div class="form-group" id="primary-sector-special" style="display:none;">
                 <label for="primarySectorSpecial">Additional Functional Area</label>
-                <input type="text" class="form-control" name="primarySectorSpecial" onchange="validateTextField('primarySectorSpecial')">
+                <input type="text" class="form-control" name="primarySectorSpecial" onchange="validateTextField('primarySectorSpecial')" maxlength="255">
             </div>
             <div class="form-group" id="emergency-services-select" style="display:none;">
                 <label for="emergencyServices">Emergency Services</label>
